--- a/WPF/Views/ProfileView.xaml
+++ b/WPF/Views/ProfileView.xaml
@@ -7,7 +7,6 @@
              xmlns:viewModels="clr-namespace:WPF.ViewModels"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviors="clr-namespace:WPF.Behaviors"
-             xmlns:controls="clr-namespace:WPF.Controls"
              mc:Ignorable="d"
              d:DesignHeight="600" d:DesignWidth="1180"
              d:DataContext="{d:DesignInstance viewModels:ProfileViewModel, IsDesignTimeCreatable=True}">
@@ -57,6 +56,7 @@
                     </i:Interaction.Behaviors>
                 </PasswordBox>
                 <PasswordBox Margin="0 10 0 0"
+                             FontSize="14"
                              hc:InfoElement.Title="Подтвердите пароль"
                              hc:InfoElement.Placeholder="Подтверждение пароля"
                              hc:InfoElement.Necessary="True"
