--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -4,12 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:WPF.ViewModels"
-        xmlns:controls="clr-namespace:WPF.Controls"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Учёт заявок" MinHeight="900" MinWidth="1400"
+        Title="Учёт заявок" MinHeight="900" MinWidth="1400" 
+        Width="1400" Height="900"
         d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel, IsDesignTimeCreatable=True}">
     <Grid Background="#efefef">
         <Grid.ColumnDefinitions>
