--- a/WPF/Views/ProfileView.xaml
+++ b/WPF/Views/ProfileView.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:hc="https://handyorg.github.io/handycontrol"
              xmlns:viewModels="clr-namespace:WPF.ViewModels"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviors="clr-namespace:WPF.Behaviors"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              d:DesignHeight="600" d:DesignWidth="1180"
              d:DataContext="{d:DesignInstance viewModels:ProfileViewModel, IsDesignTimeCreatable=True}">
@@ -50,10 +50,10 @@
                              hc:InfoElement.Placeholder="Пароль"
                              hc:InfoElement.Necessary="True"
                              Style="{StaticResource PasswordBoxExtend}">
-                    <i:Interaction.Behaviors>
+                    <b:Interaction.Behaviors>
                         <behaviors:PasswordBoxBehavior
                             Password="{Binding InputPassword, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
-                    </i:Interaction.Behaviors>
+                    </b:Interaction.Behaviors>
                 </PasswordBox>
                 <PasswordBox Margin="0 10 0 0"
                              FontSize="14"
@@ -61,10 +61,10 @@
                              hc:InfoElement.Placeholder="Подтверждение пароля"
                              hc:InfoElement.Necessary="True"
                              Style="{StaticResource PasswordBoxExtend}">
-                    <i:Interaction.Behaviors>
+                    <b:Interaction.Behaviors>
                         <behaviors:PasswordBoxBehavior
                             Password="{Binding ConfirmPassword, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
-                    </i:Interaction.Behaviors>
+                    </b:Interaction.Behaviors>
                 </PasswordBox>
                 <!-- <TextBlock Margin="1 10 0 5" FontSize="16"> -->
                 <!--     <Run Text="Ваш уровень доступа:" /> -->
