--- a/WPF/Views/RegistrationView.xaml
+++ b/WPF/Views/RegistrationView.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviors="clr-namespace:WPF.Behaviors"
              xmlns:viewModels="clr-namespace:WPF.ViewModels"
              xmlns:factories="clr-namespace:WPF.ViewModels.Factories"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              d:DesignHeight="800" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:RegistrationViewModel, IsDesignTimeCreatable=True}">
@@ -95,10 +95,10 @@
                     <PasswordBox Margin="0 -2 0 0"
                                  FontSize="24"
                                  Style="{StaticResource LoginPageTextBox}">
-                        <i:Interaction.Behaviors>
+                        <b:Interaction.Behaviors>
                             <behaviors:PasswordBoxBehavior Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                            x:Name="PasswordBox" />
-                        </i:Interaction.Behaviors>
+                        </b:Interaction.Behaviors>
                     </PasswordBox>
                 </Grid>
             </StackPanel>
@@ -113,10 +113,10 @@
                     <PasswordBox Margin="0 -2 0 0"
                                  FontSize="24"
                                  Style="{StaticResource LoginPageTextBox}">
-                        <i:Interaction.Behaviors>
+                        <b:Interaction.Behaviors>
                             <behaviors:PasswordBoxBehavior Password="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                            x:Name="ConfirmPasswordBox" />
-                        </i:Interaction.Behaviors>
+                        </b:Interaction.Behaviors>
                     </PasswordBox>
                 </Grid>
             </StackPanel>
